--- a/indexproduction.html
+++ b/indexproduction.html
@@ -11,7 +11,7 @@
 
     <title ng-bind="'SelfCare - '+template.title">SelfCare</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" />
+    <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" type="text" href="w.css" />
     <script src="w.js"></script>
     <script>
