--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/flexslider/jquery.flexslider-min.js"></script>
+    <script type="text/javascript" src="bower_components/jStorage/jstorage.min.js">
+    </script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
 
     <script src="bower_components/angular/angular.js"></script>
