--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <script src="js/navigation.js"></script>
     <script src="js/templateservice.js"></script>
 
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "7f83e0a0-cda6-4d90-a751-22de3b7435a0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script> 
+
     <script>
       var isproduction=false;
     </script>
