git sohan loder bana

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
+    <script src="./bower_components/angular-loading-bar/src/loading-bar.js"> </script>
+
+    </script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
@@ -36,7 +39,7 @@
     <script src="js/templateservice.js"></script>
 
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "7f83e0a0-cda6-4d90-a751-22de3b7435a0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script> 
+<script type="text/javascript">stLight.options({publisher: "7f83e0a0-cda6-4d90-a751-22de3b7435a0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
     <script>
       var isproduction=false;
