--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+  	<script src='./bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancyBox.pack.js"></script>
