changes for the same.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
-    <script src="./bower_components/angular-loading-bar/src/loading-bar.js"> </script>
+    <script src="bower_components/angular-loading-bar/src/loading-bar.js"> </script>
 
     </script>
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
@@ -39,8 +39,8 @@
     <script src="js/navigation.js"></script>
     <script src="js/templateservice.js"></script>
 
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-<script type="text/javascript">stLight.options({publisher: "7f83e0a0-cda6-4d90-a751-22de3b7435a0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <!-- <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "7f83e0a0-cda6-4d90-a751-22de3b7435a0", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script> -->
 
     <script>
       var isproduction=false;
