--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
 
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-flexslider/angular-flexslider.js"></script>
     <script src="bower_components/angular-loading-bar/src/loading-bar.js"> </script>
 
@@ -54,7 +55,7 @@
 <body>
 
     <div class="repeated-item no-scroll" ui-view></div>
-    
+
 </body>
 
 </html>
