--- a/indexproduction.html
+++ b/indexproduction.html
@@ -12,7 +12,7 @@
     <title ng-bind="'SelfCare - '+template.title">SelfCare</title>
 
     <link rel="shortcut icon" href="img/favicon.png" />
-    <link rel="stylesheet" type="text" href="w.css" />
+    <link rel="stylesheet" type="text/css" href="w.css" />
     <script>
       var isproduction=true;
     </script>
