--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancyBox.pack.js"></script>
+    <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
+    <script src="bower_components/angulartics-google-analytics/dist/angulartics-google-analytics.min.js"></script>
     <script>
       var isproduction=false;
     </script>
@@ -53,9 +55,7 @@
 </head>
 
 <body>
-
     <div class="repeated-item no-scroll" ui-view></div>
-
 </body>
 
 </html>
