--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="bower_components/ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-  	<script src='./bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  	<script src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js'></script>
     <script src="bower_components/lodash/lodash.min.js"></script>
     <script src="bower_components/fancyBox/source/jquery.fancyBox.pack.js"></script>
     <script src="bower_components/angulartics/dist/angulartics.min.js"></script>
