--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script>
+      var isproduction=false;
+    </script>
 
     <title ng-bind="'SelfCare - '+template.title">SelfCare</title>
 
