--- a/indexproduction.html
+++ b/indexproduction.html
@@ -3,6 +3,7 @@
 
 <head ng-controller="headerctrl">
     <meta charset="utf-8">
+    <base href="/" target="_blank" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,7 @@
     <link rel="shortcut icon" href="img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="w.css" />
     <script>
-      var isproduction=true;
+      var isproduction=false;
     </script>
     <script src="w.js"></script>
 
