--- a/indexproduction.html
+++ b/indexproduction.html
@@ -18,7 +18,10 @@
       var isproduction=false;
     </script>
     <script src="w.js"></script>
-
+    <script type="text/javascript">
+      if(window.location.host.substring(0,4)  == "www.")
+        window.location.href = window.location.href.replace("www.","");
+    </script>
     <!--[if IE]>
         <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
